Update weld version - use the compatible version with WF41 - Fix ioc-unit-analyzer bug.   The bug is a result of using newer version of weld.   improvement in weld code from version 5.1.6+ surfaced   a bug in ioc-unit analyzer. The producers in abstract classes   could not be inherited to the sub-classes of it.   The fix provides a CDI conform solution for the issue.